add early pokemon builder

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,84 @@
-#contentList {
-  border: 4px solid rgb(189, 0, 189);
-  background-color: rgb(206, 176, 206);
-  border-radius: 10px;
-  padding: 40px;
-  display: inline-block;
-  box-shadow: 10px 5px 5px rgb(54, 54, 54);
+.btn {
+  color: #f7f7ff;
+}
+
+.btn .btn-success .nav-link{
+  color: #f7f7ff;
+}
+
+.nav .navbar-nav .navbar-right li {
+  color: white;
+}
+
+.html {
+  background-color: #f7f7ff;
+}
+
+.text-custom {
+  color: white;
+}
+
+
+.modal-mask {
+  position: fixed;
+  z-index: 9998;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: table;
+  transition: opacity 0.3s ease;
+}
+
+.modal-wrapper {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.modal-container {
+  width: 300px;
+  margin: 0px auto;
+  padding: 20px 30px;
+  background-color: #fff;
+  border-radius: 2px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
+  transition: all 0.3s ease;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+.modal-header h3 {
+  margin-top: 0;
+  color: #42b983;
+}
+
+.modal-body {
+  margin: 20px 0;
+}
+
+.modal-default-button {
+  float: right;
+}
+
+/*
+ * The following styles are auto-applied to elements with
+ * transition="modal" when their visibility is toggled
+ * by Vue.js.
+ *
+ * You can easily play with the modal transition by editing
+ * these styles.
+ */
+
+.modal-enter {
+  opacity: 0;
+}
+
+.modal-leave-active {
+  opacity: 0;
+}
+
+.modal-enter .modal-container,
+.modal-leave-active .modal-container {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
