--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,18 +145,19 @@ table {
 }
 
 body{
-  padding-top: 50px; 
+  padding-top: 70px; 
   font-family: Roboto, sans-serif;
 }
 
-.btn-custom{
-  color: #fff;
-  vertical-align: baseline;
-  font-weight: bold;
-  letter-spacing: 0.05em;
-  border-radius: 0;
-}
 .routerlink{
   display: block;
   color: rgb(240, 20, 20);
+}
+
+.team-user {
+  border-radius: 10px;
+  background-color: white;
+  -moz-box-shadow:    3px 3px 5px 6px #ccc;
+  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+  box-shadow:         3px 3px 5px 6px #ccc;
 }
