--- a/public/css/pokemon-type.css
+++ b/public/css/pokemon-type.css
@@ -36,9 +36,9 @@
   border-bottom-color: #818153;
 }
 .pkm-type.fire {
-  background-color: #78c850;
-  border-top-color: #a5da8a;
-  border-bottom-color: #549b31;
+  background-color: #F08030;
+  border-top-color: #F5AC78;
+  border-bottom-color: #fc7c20;
 }
 .pkm-type.fighting {
   background-color: #c03028;
